--- a/es/cleo-3/code-library.html
+++ b/es/cleo-3/code-library.html
@@ -18,9 +18,9 @@ Qué es CLEO 3? -------
 
 CLEO 3 es el siguiente paso en el desarrollo del proyecto CLEO que amplia las posibilidades de codificacion en San Andreas. Despues de instalar CLEO 3, obtienes todo lo que CLEO 2 puede, mas algunas caracteristicas nuevas.
 
-1. [Nuevos opcodes](opcodes.md).<br>CLEO 3 tiene 40 opcodes útiles almacenados, como administración de archivos, manejo de memoria de juegos, capacidad para llamar a funciones exe y mucho más. La tercera versión [agrega tales opcodes](opcodes.md) como una llamada de una función SCM, creando un hilo o iniciando una misión desde un archivo externo y más.
-2. [Plugins](#plugins "(complementos)").<br>Lea más acerca de ellos a continuación.
-3. [Scripts personalizados](scripts.md "(guiones)").<br>CLEO 3 permite agregar los scripts personalizados al juego escritos en Sanny Builder sin necesidad de iniciar un nuevo juego. Todo lo que necesita es escribir un script, colocarlo en la carpeta CLEO y ejecutar el juego (nuevo o guardado).
+1. [Nuevos opcodes](opcodes.md).\nCLEO 3 tiene 40 opcodes útiles almacenados, como administración de archivos, manejo de memoria de juegos, capacidad para llamar a funciones exe y mucho más. La tercera versión [agrega tales opcodes](opcodes.md) como una llamada de una función SCM, creando un hilo o iniciando una misión desde un archivo externo y más.
+2. [Plugins](#plugins "(complementos)").\nLea más acerca de ellos a continuación.
+3. [Scripts personalizados](scripts.md "(guiones)").\nCLEO 3 permite agregar los scripts personalizados al juego escritos en Sanny Builder sin necesidad de iniciar un nuevo juego. Todo lo que necesita es escribir un script, colocarlo en la carpeta CLEO y ejecutar el juego (nuevo o guardado).
 
 :::right light gray p-2
 ¿Qué versiones de juegos son compatibles? -------
