--- a/es/coding/variables.html
+++ b/es/coding/variables.html
@@ -195,7 +195,7 @@ El compilador enlaza una nueva variable local a cada nombre. En el ejemplo anter
 ```
 
 {% hint style="info" %}
-Debido a [limitaciones de diseño](https://github.com/sannybuilder/dev/issues/32) esta característica solo está disponible en CLEO scripts.
+Debido a [limitaciones de diseño](https://github.com/sannybuilder/dev/issues/32) esta característica solo está disponible en scripts de CLEO.
 {% endhint %}
 
 ## Inicialización de Variable
