--- a/es/editor/console.html
+++ b/es/editor/console.html
@@ -59,7 +59,7 @@ P.ej. dada una Array de tres elementos que comienzan en `$10`, esta opción afec
 
 ### SKIP_SCM_HEADER
 
-Desensamblador omite el encabezado del archivo de entrada. Permite abrir scripts sin cabeza (por ejemplo, los de `script.img` o CLEO scripts).
+Desensamblador omite el encabezado del archivo de entrada. Permite abrir scripts sin cabeza (por ejemplo, los de `script.img` o scripts de CLEO).
 
 Con esta opción, el compilador crea archivos `.scm` sin el encabezado (similar a la [directiva](../coding/directives.md#$external)`{$EXTERNAL}`).
 
