--- a/es/errors.html
+++ b/es/errors.html
@@ -102,23 +102,23 @@ Sanny Builder arroja mensajes de error o advertencia si algo salió mal. En esta
 [0089](#0089)
 :::
 
-If you are unable to resolve the issue with the given instructions or get an unhandled exception, report them in the bug tracker on GitHub: [https://github.com/sannybuilder/dev/issues](https://github.com/sannybuilder/dev/issues)
+Si no puedes resolver el problema con las instrucciones dadas o consigues una excepción no manejada, infórmalo en el bug tracker de GitHub: [https://github.com/sannybuilder/dev/issues](https://github.com/sannybuilder/dev/issues)
 
 ---
 
-#### [0001][]0001: INI file not found
+#### [0001][]0001: Archivo INI no encontrado
 
-Sanny Builder can't find [the opcodes definitions file](edit-modes/opcodes-list-scm.ini.md). The compiler can not work without it.
+Sanny Builder no puede encontrar [el archivo de definiciones de opcodes](edit-modes/opcodes-list-scm.ini.md). El compilador no puede trabajar sin él.
 
-**Possible solutions:** check if the file set in the edit mode [configuration](edit-modes/README.md#opcodes) exists.
+**Posibles soluciones:** compruebe si el archivo establecido en el modo de edición [configuración](edit-modes/README.md#opcodes) existe.
 
 ---
 
-#### [0002][]0002: Unknown array type
+#### [0002][]0002: Tipo de array desconocido
 
-The disassembler can't recognize the type of an [array](coding/arrays.md) in a script file. It may happen because of wrong compilation.
+El desensamblador no puede reconocer el tipo de un [array](coding/arrays.md) en un archivo de script. Puede ocurrir debido a una compilación incorrecta.
 
-**Possible solutions:** enable [debug option](editor/console.md#ignore_unknown) `IGNORE_UNKNOWN`.
+**Posibles soluciones:** habilitar la [opción de depuración](editor/console.md#ignore_unknown) `IGNORE_UNKNOWN`.
 
 
 <script src="../js/main.min.js"></script>
