--- a/es/scm-documentation/sa/stats.html
+++ b/es/scm-documentation/sa/stats.html
@@ -95,12 +95,12 @@ Del `0` al `81` - valores decimales; `82+` - valores enteros.
 |79|Rifle Skill|
 |80|Appearance|
 |81|Gambling|
-|82|119    unused|
+|82\-119|unused|
 |120|People wasted by others|
-|121|People you&#39;ve wasted|
+|121|People you've wasted|
 |122|Road Vehicles destroyed|
 |123|Boats destroyed|
-|124|Planes &amp; Helicopters destroyed|
+|124|Planes & Helicopters destroyed|
 |125|Cost of property damaged|
 |126|Bullets fired|
 |127|Kgs of explosives used|
@@ -151,10 +151,10 @@ Del `0` al `81` - valores decimales; `82+` - valores enteros.
 |172|Best position in 8-Track|
 |173|Time on jetpack|
 |174|Shooting range levels passed|
-|175|Most cars parked on &#39;Valet Parking&#39;|
+|175|Most cars parked on 'Valet Parking'|
 |176|Kills since last checkpoint|
 |177|Total legitimate kills|
-|178|Number of &#39;Bloodring&#39; kills|
+|178|Number of 'Bloodring' kills|
 |179|Total time in bloodring|
 |180|No more hurricanes Flag|
 |181|City unlocked|
@@ -227,7 +227,7 @@ Del `0` al `81` - valores decimales; `82+` - valores enteros.
 |248|2 Player On Foot Rampage best time|
 |249|2 Player Chopper Rampage best time|
 |250|2 Player Bike Rampage best time|
-|251|&#39;Keepie Uppy&#39; best time|
+|251|'Keepie Uppy' best time|
 |252|Progress with Denise|
 |253|Progress with Michelle|
 |254|Progress with Helena|
@@ -283,10 +283,10 @@ Del `0` al `81` - valores decimales; `82+` - valores enteros.
 |304|555 WE TIP mission accomplished|
 |305|Yay Ka-Boom-Boom mission accomplished|
 |306|Fish in a Barrel mission accomplished|
-|307|Breaking the Bank at Caligula&#39;s mission accomplished|
+|307|Breaking the Bank at Caligula's mission accomplished|
 |308|A Home In The Hills mission accomplished|
 |309|maybe set riot mode|
-|310|Ryder&#39;s mission Robbing Uncle Sam accomplished|
+|310|Ryder's mission Robbing Uncle Sam accomplished|
 |311|Mike Toreno mission accomplished|
 |312|Architectural Espionage mission accomplished|
 |313|Jizzy mission accomplished|
