--- a/es/scm-documentation/sa/weather.html
+++ b/es/scm-documentation/sa/weather.html
@@ -14,29 +14,29 @@
 
 |Descripción|ID|GXT|
 |-|
-|LA: Extra Sunny|0|WEATH0|
-|LA: Sunny|1|WEATH1|
-|LA: Extra Sunny Smog|2|WEATH2|
-|LA: Sunny Smog|3|WEATH3|
-|LA: Cloudy|4|WEATH4|
-|SF: Sunny|5|WEATH5|
-|SF: Extra Sunny|6|WEATH6|
-|SF: Cloudy|7|WEATH7|
-|SF: Rainy|8|WEATH8|
-|SF: Foggy|9|WEATH9|
-|LV: Sunny|10|WEATH10|
-|LV: Extra Sunny|11|WEATH11|
-|LV: Cloudy|12|WEATH12|
-|C: Extra Sunny|13|WEATH13|
-|C: Sunny|14|WEATH14|
-|C: Cloudy|15|WEATH15|
-|C: Rainy|16|WEATH16|
-|D: Extra Sunny|17|WEATH17|
-|D: Sunny|18|WEATH18|
-|D: Sandstorm|19|WEATH19|
-|S: Underwater|20|WEATH20|
-|S: Extracolours 1|21|WEATH21|
-|S: Extracolours 2|22|WEATH22|
+|LA: Extra soleado|0|WEATH0|
+|LA: Soleado|1|WEATH1|
+|LA: Nublado Extra Brillante|2|WEATH2|
+|LA: Nublado oscura|3|WEATH3|
+|LA: Nublado|4|WEATH4|
+|SF: Soleado|5|WEATH5|
+|SF: Extra Soleado|6|WEATH6|
+|SF: Nublado|7|WEATH7|
+|SF: Lluvioso|8|WEATH8|
+|SF: Nublado|9|WEATH9|
+|LV: Soleado|10|WEATH10|
+|LV: Extra Soleado|11|WEATH11|
+|LV: Nublado|12|WEATH12|
+|C: Extra Soleado|13|WEATH13|
+|C: Soleado|14|WEATH14|
+|C: Nublado|15|WEATH15|
+|C: Lluvioso|16|WEATH16|
+|D: Extra Soleado|17|WEATH17|
+|D: Soleado|18|WEATH18|
+|D: Tormenta de arena|19|WEATH19|
+|S: Bajo el agua|20|WEATH20|
+|S: Extracoloridos 1|21|WEATH21|
+|S: Extracoloridos 2|22|WEATH22|
 
 > **L**os **S**antos, **S**an **F**ierro, **L**as **V**enturas, **C**ountryside, **D**esert, **S**pecial
 <script src="../../../js/main.min.js"></script>
