--- a/test/markdown/console.html
+++ b/test/markdown/console.html
@@ -14,6 +14,10 @@ this is a beta
 
 <script src="../../js/main.js"></script>
 <script>
+function print(value){
+  $(".text").innerText = value
+}
+
 $(".markdown").innerHTML += '\
   <div class="console-js d-none">\
     <span class="h4">JavaScript Console</span>\
