--- a/es/README.html
+++ b/es/README.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
+<body>
 
 **Sanny Builder** es una rápida y potente herramienta, diseñada para la serie de juegos GTA 3D (GTA3, VC, SA, LCS, VCS).
 
@@ -36,4 +37,5 @@ Para cualquier pregunta, envíeme un correo electrónico a [mail@sannybuilder.co
 
 &copy; 2005-2021 Seemann
 
-<script src="../js/main.min.js"></script>
+<script src="menu.js"></script>
+<script src="../js/main.js"></script>
