--- a/es/cleo-3/opcodes.html
+++ b/es/cleo-3/opcodes.html
@@ -658,4 +658,5 @@ Estas variables pueden utilizarse en el main.scm como alternativa a las variable
   - `0`: apagado 
   - `1`: encendido
 
+<script src="../menu.js"></script>
 <script src="../../js/main.min.js"></script>
