--- a/es/cleo-3/scripts.html
+++ b/es/cleo-3/scripts.html
@@ -43,4 +43,5 @@ Además, para la comunicación de datos entre main.scm y CLEO, o entre los scrip
 El conjunto completo de CLEO incluye ejemplos de scripts simples con fuentes.
 
 
+<script src="../menu.js"></script>
 <script src="../../js/main.min.js"></script>
