--- a/es/coding/arrays.html
+++ b/es/coding/arrays.html
@@ -105,4 +105,5 @@ $players[0].Build
 Por predeterminado, en el [modo de edición](../edit-modes/README.md) de `GTA SA`, el desensamblador imprime los elementos del arreglo con los números como índices. La misma función está en LCS y VCS, pero desactivada de forma predeterminada. Puede activar y desactivar esta función mediante la opción de depuración `CONSTANT_INDEXES`.
 {% endhint %}
 
+<script src="../menu.js"></script>
 <script src="../../js/main.min.js"></script>
