--- a/es/coding/built-in-commands.html
+++ b/es/coding/built-in-commands.html
@@ -139,4 +139,5 @@ $rnd = random(1, $high)
 
 Esta función se puede utilizar para variables enteras y decimales. El opcode es seleccionado según el tipo de la variable resultada (`$rnd` en este ejemplo).
 
+<script src="../menu.js"></script>
 <script src="../../js/main.min.js"></script>
