--- a/es/coding/classes.html
+++ b/es/coding/classes.html
@@ -187,4 +187,5 @@ Desde v3.6 los miembros de la clase usan nombres de enumeración como sus tipos 
 
 Para la compatibilidad con versiones anteriores, Sanny Builder sigue siendo compatible con los parámetros extendidos antiguos durante la compilación. classes.db los mantiene bajo la sección `DEPRECATED_ENUMS`.
 
+<script src="../menu.js"></script>
 <script src="../../js/main.min.js"></script>
