--- a/es/coding/comments.html
+++ b/es/coding/comments.html
@@ -35,4 +35,5 @@ Desde la versión 3.06, Sanny Builder también admite comentarios similares a C+
 
 Para comentar o descomentar varias líneas seleccionadas del código, presione `Ctrl+Q` (esta tecla de acceso rápido se puede configurar en las [opciones](../editor/options/hotkeys.md)).
 
+<script src="../menu.js"></script>
 <script src="../../js/main.min.js"></script>
