--- a/es/credits.html
+++ b/es/credits.html
@@ -32,4 +32,5 @@ SynEdit © SynEdit Team\
 Inno Setup © Jordan Russell, Martijn Laan\
 [https://jrsoftware.org/isinfo.php](https://jrsoftware.org/isinfo.php)
 
+<script src="menu.js"></script>
 <script src="../js/main.min.js"></script>
