--- a/es/errors.html
+++ b/es/errors.html
@@ -121,4 +121,5 @@ El desensamblador no puede reconocer el tipo de un [array](coding/arrays.md) en 
 **Posibles soluciones:** habilitar la [opción de depuración](editor/console.md#ignore_unknown) `IGNORE_UNKNOWN`.
 
 
+<script src="menu.js"></script>
 <script src="../js/main.min.js"></script>
