--- a/es/version-history.html
+++ b/es/version-history.html
@@ -505,4 +505,5 @@ El miembro de la clase `Car.SetSpeedInstantly` fue nombrado incorrectamente (con
 * compilación de fuentes de texto en `main.scm` y `script.img`.
 * características básicas para la edición de texto
 
+<script src="menu.js"></script>
 <script src="../js/main.min.js"></script>
