--- a/es/cleo-3/code-library.html
+++ b/es/cleo-3/code-library.html
@@ -71,4 +71,5 @@ Si desea ayudar en el desarrollo de la biblioteca o sus complementos, contáctem
 
 También gracias a [Stanislav Golovin](http://www.gtaforums.com/index.php?showuser=236130 "(aka listener)") por su apoyo e información útil.
 
+<script src="../menu.js"></script>
 <script src="../../js/main.min.js"></script>
